text overlap bug fix

--- a/src/static/styles/projects.css
+++ b/src/static/styles/projects.css
@@ -18,6 +18,7 @@
 
 .projectDescription {
     text-align: left;
+    display: inline-block;
 }
 
 .closed {
